<resources>
    <string name="app_name">SurbhiVarday</string>
    <string name="ad_payments">Ad Payments</string>
    <string name="ad_network">Ad Networks</string>
    <string name="add">Add</string>
    <string name="view">View</string>
    <string name="enter_alias">Enter alias</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_privacy_url">Enter privacy URL</string>
    <string name="add_ad_network">Add Ad Network</string>
    <string name="edit_ad_network">Edit Ad Network</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="empty_alias">Please enter alias</string>
    <string name="empty_name">Please enter name</string>
    <string name="empty_privacy_url">Please enter privacy URL</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_data_found">No Ad networks available</string>
    <string name="ad_network_added_successfully">Ad network added successfully</string>
    <string name="add_ad_network_failed">Add ad network failed, please try again</string>
    <string name="delete_confirmation">Are you sure you want to delete this ad network?</string>
</resources>